Fix issue 03976: Layout problem at Multiple short text Dev Vertically aligned the label to middle - improved layout in Firefox with multiple row textareas
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/limesurvey@8158 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/templates/vallendar/template.css
+++ b/templates/vallendar/template.css
@@ -444,13 +444,20 @@ ul.cols-8 li , ul.cols-8-ul , table.cols-8 td { width: 11.5%; }
 	display: table-cell;
 	vertical-align: baseline;
 }
- .multiple-short-txt ul li label
-,.numeric-multi ul li label
+
+.numeric-multi ul li label
 {
 	padding: 0.3em 1em 0% 0%;
 	display: table-cell;
 	vertical-align: baseline;
 }
+
+ .multiple-short-txt ul li label {
+	padding: 0.3em 1em 0% 0%;
+	display: table-cell;
+	vertical-align: middle;
+}
+
 .numeric-multi ul.computed li label
 .numeric-multi ul.slider.computed li label
 {
